--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         let activeCategory = 'ทั้งหมด';
 
         window.onload = () => {
-            if(GOOGLE_SCRIPT_URL === 'ใส่_URL_ของคุนที่นี่') {
+            if(GOOGLE_SCRIPT_URL === 'https://script.google.com/macros/s/AKfycbyBdhtZVjNcq6V2NF8IXfreXblx1TLz4CuKisVDjzZxW9MM4cjwU6buY3RWzrhbLsPh/exec') {
                 document.getElementById('mainLoading').innerHTML = `<p class="text-red-500 font-bold">กรุณาตั้งค่า GOOGLE_SCRIPT_URL ในโค้ดก่อนครับ</p>`;
                 return;
             }
